--- a/.travis.yml
+++ b/.travis.yml
@@ -111,6 +111,12 @@ jobs:
       - make setup-kong-build-tools
       - pushd ../kong-build-tools && make setup-ci && popd
       - make release
+      env: PACKAGE_TYPE=deb RESTY_IMAGE_BASE=debian RESTY_IMAGE_TAG=buster KONG_PACKAGE_NAME=${PWD##*/} KONG_VERSION=${TRAVIS_TAG}
+      if: tag IS present AND tag ~= 1.
+    - script:
+      - make setup-kong-build-tools
+      - pushd ../kong-build-tools && make setup-ci && popd
+      - make release
       env: PACKAGE_TYPE=rpm RESTY_IMAGE_BASE=centos RESTY_IMAGE_TAG=6 KONG_PACKAGE_NAME=${PWD##*/} KONG_VERSION=${TRAVIS_TAG}
       if: tag IS present AND tag ~= 1.
     - script:
