--- a/spec/fixtures/custom_nginx.template
+++ b/spec/fixtures/custom_nginx.template
@@ -56,6 +56,7 @@ http {
     lua_shared_dict kong_cluster_events 5m;
     lua_shared_dict kong_vitals_counters 5m;
     lua_shared_dict kong_vitals_lists   1m;
+    lua_shared_dict kong_counters       1m;
     lua_shared_dict kong_healthchecks   5m;
     lua_shared_dict kong_rate_limiting_counters 12m;
     lua_shared_dict kong_reports_consumers       1m;
@@ -521,6 +522,7 @@ stream {
 > end
     lua_shared_dict stream_prometheus_metrics  5m;
     lua_shared_dict stream_kong_vitals_counters 50m;
+    lua_shared_dict stream_kong_counters 50m;
     lua_shared_dict stream_kong_vitals_lists     1m;
 
 
