--- a/spec/fixtures/custom_nginx.template
+++ b/spec/fixtures/custom_nginx.template
@@ -71,6 +71,9 @@ http {
 > if database == "cassandra" then
     lua_shared_dict kong_cassandra      5m;
 > end
+> if role == "control_plane" then
+lua_shared_dict kong_clustering     5m;
+> end
     lua_socket_log_errors off;
 > if lua_ssl_trusted_certificate then
     lua_ssl_trusted_certificate '${{LUA_SSL_TRUSTED_CERTIFICATE}}';
@@ -93,7 +96,7 @@ http {
         Kong.init_worker()
     }
 
-> if #proxy_listeners > 0 then
+> if (role == "traditional" or role == "data_plane") and #proxy_listeners > 0 then
     upstream kong_upstream {
         server 0.0.0.1;
         balancer_by_lua_block {
@@ -276,9 +279,9 @@ http {
             }
         }
     }
-> end
+> end -- (role == "traditional" or role == "data_plane") and #proxy_listeners > 0
 
-> if #admin_listeners > 0 then
+> if (role == "control_plane" or role == "traditional") and #admin_listeners > 0 then
     server {
         server_name kong_admin;
 > for i = 1, #admin_listeners do
@@ -325,7 +328,7 @@ http {
             return 200 'User-agent: *\nDisallow: /';
         }
     }
-> end
+> end -- (role == "control_plane" or role == "traditional") and #admin_listeners > 0
 
 > if #status_listeners > 0 then
     server {
@@ -363,6 +366,26 @@ http {
         }
     }
 > end
+
+> if role == "control_plane" then
+server {
+This conversation was marked as resolved by bungle
+    server_name kong_cluster_listener;
+> for i = 1, #cluster_listeners do
+    listen $(cluster_listeners[i].listener) ssl;
+> end
+    access_log off;
+    ssl_verify_client   optional_no_ca;
+This conversation was marked as resolved by hbagdi
+    ssl_certificate     ${{CLUSTER_CERT}};
+    ssl_certificate_key ${{CLUSTER_CERT_KEY}};
+    location = /v1/outlet {
+        content_by_lua_block {
+            Kong.serve_cluster_listener()
+        }
+    }
+}
+> end -- role == "control_plane"
 
     server {
         server_name mock_upstream;
