feat(portal) make portal gui logs configurable (#1519)
- change portal api error logs default location to portal_api_error.log

--- a/spec/kong_tests.conf
+++ b/spec/kong_tests.conf
@@ -23,7 +23,9 @@ portal_gui_ssl_cert = spec/fixtures/kong_spec.crt
 portal_gui_ssl_cert_key = spec/fixtures/kong_spec.key
 portal_api_listen = 0.0.0.0:9004, 0.0.0.0:9447 ssl
 portal_api_access_log = logs/portal_api_access.log
-portal_api_error_log = logs/error.log
+portal_api_error_log = logs/portal_api_error.log
+portal_gui_access_log = logs/portal_gui_access.log
+portal_gui_error_log = logs/portal_gui_error.log
 proxy_url = http://127.0.0.1:9004
 portal_api_url = http://127.0.0.1:9004
 portal_api_ssl_cert = spec/fixtures/kong_spec.crt
