--- a/spec/fixtures/custom_nginx.template
+++ b/spec/fixtures/custom_nginx.template
@@ -163,6 +163,7 @@ http {
             set $upstream_x_forwarded_proto '';
             set $upstream_x_forwarded_host  '';
             set $upstream_x_forwarded_port  '';
+            set $set_request_id     $request_id;
             set $kong_proxy_mode            'http';
 
             proxy_http_version    1.1;
