feat(ci) allow packaging job to fail
This job will fail on PR that are not targeting master usually. Let it
fail.

--- a/.travis.yml
+++ b/.travis.yml
@@ -102,5 +102,9 @@ jobs:
       if: branch = master
       script: .ci/build_package.sh && .ci/release_artifacts.sh
 
+  # Allow the packaging step to fail
+  allow_failures:
+    - name: package
+
 script:
   - .ci/run_tests.sh
