fix(ci) change permissions before_cache travis
Some files created within docker are not accessible by travis user when
trying to cache them

--- a/.travis.yml
+++ b/.travis.yml
@@ -72,6 +72,11 @@ cache:
     - $HOME/.ccm/repository
     - $HOME/distributions-cache
 
+before_cache:
+  # files in distributions cache have been created within docker, so it's
+  # completely possible that travis user would not have full permissions
+  - sudo chown -R travis:travis $HOME/distributions-cache
+
 stages:
   - lint and unit
   - test
