feat(vitals) send telemetry to control plane
All your ✈️  are belong to us

Based on https://github.com/Kong/kong-ee/pull/1585
         https://github.com/Kong/kong-ee/pull/1776

Commits:
  e1510726f54852f465ab1ec288ba060c2abd07a3
  502100820e0efb5a943bb73b9cfc062603961ca2
  d751610e17cc68a52ff107e64d93e25ac56cd897
  96c746035734d40af6a448c215b7e0653cdc0fba
  1202d2518f2d86405383c3b80ee40306edd43e56
  69aa20589891a8c0819317b407a90ab154a3e9ce
  3020e5ba012e7ae6e4f971c91f680ccad89b469d
  96188c9d4ac6c6e02e5260584f41ecef68c90394
  424eac445903f726c9a9e6ab0c00466ab814a83b
  f2bb9ccc994fa215ff7b7328dd08962270bf6a02
  c1314ee5ca497f7d8fe25bf58d1e73bd6570b4e7
  a034c6c5de6e51bf19e2d71b34026b7bde42279d
  a0a08bd86492d01b42d0b66c760abf8485095ac3
  9844dd07a2ca43e1d43eb30ec5a13f04aff96979
  7815d45815b0f1b1db06349a0c23f265daf9f9f6

--- a/spec/fixtures/custom_nginx.template
+++ b/spec/fixtures/custom_nginx.template
@@ -397,6 +397,28 @@ http {
     }
 > end -- role == "control_plane"
 
+> if role == "control_plane" then
+    server {
+        server_name kong_cluster_telemetry_listener;
+> for _, entry in ipairs(cluster_telemetry_listeners) do
+        listen $(entry.listener) ssl;
+> end
+
+        access_log off;
+
+        ssl_verify_client   optional_no_ca;
+        ssl_certificate     ${{CLUSTER_CERT}};
+        ssl_certificate_key ${{CLUSTER_CERT_KEY}};
+        ssl_session_cache   shared:ClusterSSL:10m;
+
+        location = /v1/ingest {
+            content_by_lua_block {
+                Kong.serve_cluster_telemetry_listener()
+            }
+        }
+    }
+> end -- role == "control_plane"
+
     server {
         server_name mock_upstream;
 
