chore(go-plugin-release) send additional information for official release builds (#5947)
* chore(go-plugin-release) send additional information for official release builds

* chore(deps) bump the kong-build-tools dependency

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -14,6 +14,7 @@ jobs:
           echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
         
     - uses: azure/docker-login@v1
+      if: ${{ github.repository == 'kong/kong' }}
       with:
         username: ${{ secrets.KONG_USERNAME }}
         password: ${{ secrets.KONG_PASSWORD }}
@@ -42,6 +43,7 @@ jobs:
           echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
         
     - uses: azure/docker-login@v1
+      if: ${{ github.repository == 'kong/kong' }}
       with:
         username: ${{ secrets.KONG_USERNAME }}
         password: ${{ secrets.KONG_PASSWORD }}
@@ -71,6 +73,7 @@ jobs:
           echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
         
     - uses: azure/docker-login@v1
+      if: ${{ github.repository == 'kong/kong' }}
       with:
         username: ${{ secrets.KONG_USERNAME }}
         password: ${{ secrets.KONG_PASSWORD }}
@@ -97,6 +100,7 @@ jobs:
           echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
           
     - uses: azure/docker-login@v1
+      if: ${{ github.repository == 'kong/kong' }}
       with:
         username: ${{ secrets.KONG_USERNAME }}
         password: ${{ secrets.KONG_PASSWORD }}
@@ -129,6 +133,7 @@ jobs:
           echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
         
     - uses: azure/docker-login@v1
+      if: ${{ github.repository == 'kong/kong' }}
       with:
         username: ${{ secrets.KONG_USERNAME }}
         password: ${{ secrets.KONG_PASSWORD }}
@@ -172,6 +177,7 @@ jobs:
           echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
         
     - uses: azure/docker-login@v1
+      if: ${{ github.repository == 'kong/kong' }}
       with:
         username: ${{ secrets.KONG_USERNAME }}
         password: ${{ secrets.KONG_PASSWORD }}
