chore(ci) run github actions on master, next, pr's and tags

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -1,6 +1,16 @@
 name: Build & Test
 
-on: [push, pull_request]
+on:
+  pull_request:
+    branches:
+      - '*'
+  push:
+    branches:    
+      - master
+      - next
+      - 'releases/*'
+    tags:
+      - '*'
 
 jobs:
   build:
