chore(ci) try continue_on_error instead

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -24,7 +24,7 @@ jobs:
           echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
         
     - uses: azure/docker-login@v1
-      if: ${{ github.repository == 'kong/kong' }}
+      continue-on-error: true
       with:
         username: ${{ secrets.KONG_USERNAME }}
         password: ${{ secrets.KONG_PASSWORD }}
@@ -53,7 +53,7 @@ jobs:
           echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
         
     - uses: azure/docker-login@v1
-      if: ${{ github.repository == 'kong/kong' }}
+      continue-on-error: true
       with:
         username: ${{ secrets.KONG_USERNAME }}
         password: ${{ secrets.KONG_PASSWORD }}
@@ -83,7 +83,7 @@ jobs:
           echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
         
     - uses: azure/docker-login@v1
-      if: ${{ github.repository == 'kong/kong' }}
+      continue-on-error: true
       with:
         username: ${{ secrets.KONG_USERNAME }}
         password: ${{ secrets.KONG_PASSWORD }}
@@ -110,7 +110,7 @@ jobs:
           echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
           
     - uses: azure/docker-login@v1
-      if: ${{ github.repository == 'kong/kong' }}
+      continue-on-error: true
       with:
         username: ${{ secrets.KONG_USERNAME }}
         password: ${{ secrets.KONG_PASSWORD }}
@@ -143,7 +143,7 @@ jobs:
           echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
         
     - uses: azure/docker-login@v1
-      if: ${{ github.repository == 'kong/kong' }}
+      continue-on-error: true
       with:
         username: ${{ secrets.KONG_USERNAME }}
         password: ${{ secrets.KONG_PASSWORD }}
@@ -187,7 +187,7 @@ jobs:
           echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
         
     - uses: azure/docker-login@v1
-      if: ${{ github.repository == 'kong/kong' }}
+      continue-on-error: true
       with:
         username: ${{ secrets.KONG_USERNAME }}
         password: ${{ secrets.KONG_PASSWORD }}
