chore(ci) github actions adjustment (#5965)
* chore(go-plugin-release) send additional information for official release builds (#5947)

* chore(go-plugin-release) send additional information for official release builds

* chore(deps) bump the kong-build-tools dependency

* chore(ci) run github actions on master, next, pr's and tags

* chore(ci) try continue_on_error instead

* chore(ci) let the tests start after the build job has completed

* chore(ci) this conditional is no longer needed

* chore(deps) bump the kong-build-tools dependency

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -1,6 +1,16 @@
 name: Build & Test
 
-on: [push, pull_request]
+on:
+  pull_request:
+    branches:
+      - '*'
+  push:
+    branches:    
+      - master
+      - next
+      - 'releases/*'
+    tags:
+      - '*'
 
 jobs:
   build:
@@ -14,6 +24,7 @@ jobs:
           echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
         
     - uses: azure/docker-login@v1
+      continue-on-error: true
       with:
         username: ${{ secrets.KONG_USERNAME }}
         password: ${{ secrets.KONG_PASSWORD }}
@@ -42,6 +53,7 @@ jobs:
           echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
         
     - uses: azure/docker-login@v1
+      continue-on-error: true
       with:
         username: ${{ secrets.KONG_USERNAME }}
         password: ${{ secrets.KONG_PASSWORD }}
@@ -58,7 +70,7 @@ jobs:
   pdk:
     name: PDK
     runs-on: ubuntu-18.04
-    needs: lint-unit-tests
+    needs: build
 
     env:
       TEST_SUITE: pdk
@@ -71,6 +83,7 @@ jobs:
           echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
         
     - uses: azure/docker-login@v1
+      continue-on-error: true
       with:
         username: ${{ secrets.KONG_USERNAME }}
         password: ${{ secrets.KONG_PASSWORD }}
@@ -87,8 +100,7 @@ jobs:
   package-and-smoke-test:
     name: Package and smoke test Kong
     runs-on: ubuntu-18.04
-    needs: lint-unit-tests
-    if: contains(github.ref, 'merge')
+    needs: build
 
     steps:
     - name: Set env
@@ -97,6 +109,7 @@ jobs:
           echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
           
     - uses: azure/docker-login@v1
+      continue-on-error: true
       with:
         username: ${{ secrets.KONG_USERNAME }}
         password: ${{ secrets.KONG_PASSWORD }}
@@ -116,7 +129,7 @@ jobs:
   integration-tests-dbless:
     name: DB-less integration tests
     runs-on: ubuntu-18.04
-    needs: lint-unit-tests
+    needs: build
 
     env:
       TEST_DATABASE: 'off'
@@ -129,6 +142,7 @@ jobs:
           echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
         
     - uses: azure/docker-login@v1
+      continue-on-error: true
       with:
         username: ${{ secrets.KONG_USERNAME }}
         password: ${{ secrets.KONG_PASSWORD }}
@@ -145,7 +159,7 @@ jobs:
   integration-tests-with-databases:
     name: ${{matrix.database}} (${{ matrix.suite }}) ${{ matrix.split }} integration tests
     runs-on: ubuntu-18.04
-    needs: lint-unit-tests
+    needs: build
 
     strategy:
       matrix:
@@ -172,6 +186,7 @@ jobs:
           echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
         
     - uses: azure/docker-login@v1
+      continue-on-error: true
       with:
         username: ${{ secrets.KONG_USERNAME }}
         password: ${{ secrets.KONG_PASSWORD }}
