chore(ci) run CI against all branches / PR's

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -1,16 +1,6 @@
 name: Build & Test
 
-on:
-  pull_request:
-    branches:
-      - '*'
-  push:
-    branches:    
-      - master
-      - next
-      - 'releases/*'
-    tags:
-      - '*'
+on: [push, pull_request]
 
 jobs:
   build:
