--- a/spec/fixtures/custom_nginx.template
+++ b/spec/fixtures/custom_nginx.template
@@ -157,7 +157,39 @@ http {
             set $upstream_x_forwarded_prefix '';
             set $kong_proxy_mode             'http';
 
-            proxy_http_version    1.1;
+            proxy_http_version      1.1;
+            proxy_request_buffering on;
+
+            proxy_set_header      TE                 $upstream_te;
+            proxy_set_header      Host               $upstream_host;
+            proxy_set_header      Upgrade            $upstream_upgrade;
+            proxy_set_header      Connection         $upstream_connection;
+            proxy_set_header      X-Forwarded-For    $upstream_x_forwarded_for;
+            proxy_set_header      X-Forwarded-Proto  $upstream_x_forwarded_proto;
+            proxy_set_header      X-Forwarded-Host   $upstream_x_forwarded_host;
+            proxy_set_header      X-Forwarded-Port   $upstream_x_forwarded_port;
+            proxy_set_header      X-Forwarded-Path   $upstream_x_forwarded_path;
+            proxy_set_header      X-Forwarded-Prefix $upstream_x_forwarded_prefix;
+            proxy_set_header      X-Real-IP          $remote_addr;
+            proxy_pass_header     Server;
+            proxy_pass_header     Date;
+            proxy_ssl_name        $upstream_host;
+            proxy_ssl_server_name on;
+> if client_ssl then
+            proxy_ssl_certificate ${{CLIENT_SSL_CERT}};
+            proxy_ssl_certificate_key ${{CLIENT_SSL_CERT_KEY}};
+> end
+            proxy_pass            $upstream_scheme://kong_upstream$upstream_uri;
+        }
+
+        location @unbuffered {
+            internal;
+            default_type         '';
+            set $kong_proxy_mode 'unbuffered';
+
+            proxy_http_version      1.1;
+            proxy_request_buffering off;
+
             proxy_set_header      TE                 $upstream_te;
             proxy_set_header      Host               $upstream_host;
             proxy_set_header      Upgrade            $upstream_upgrade;
