fix(zipkin) fix sporadic hanging of zipkin container
The healthcheck failed because of the following error;
  wget: can't open 'health': File exists

--- a/.pongo/zipkin.yml
+++ b/.pongo/zipkin.yml
@@ -9,6 +9,7 @@ services:
       test:
       - CMD
       - wget
+      - -O/dev/null
       - localhost:9411/health
       timeout: 10s
     restart: on-failure
