docs(autodoc) rename autodoc script
Renamed autodoc-admin-api to just autodoc, since it will have more items in the future.

Also, made it clean up the output before running (it will also have more items in the future).

--- a/.travis.yml
+++ b/.travis.yml
@@ -64,7 +64,7 @@ jobs:
     - stage: lint and unit
       script:
       - make lint
-      - scripts/autodoc-admin-api
+      - scripts/autodoc
       - bin/busted -v -o htest spec/01-unit
       env:
         - KONG_DATABASE=none
