--- a/spec/fixtures/custom_nginx.template
+++ b/spec/fixtures/custom_nginx.template
@@ -153,6 +153,7 @@ http {
             set $upstream_x_forwarded_proto  '';
             set $upstream_x_forwarded_host   '';
             set $upstream_x_forwarded_port   '';
+            set $upstream_x_forwarded_path   '';
             set $upstream_x_forwarded_prefix '';
             set $kong_proxy_mode             'http';
 
@@ -165,6 +166,7 @@ http {
             proxy_set_header      X-Forwarded-Proto  $upstream_x_forwarded_proto;
             proxy_set_header      X-Forwarded-Host   $upstream_x_forwarded_host;
             proxy_set_header      X-Forwarded-Port   $upstream_x_forwarded_port;
+            proxy_set_header      X-Forwarded-Path   $upstream_x_forwarded_path;
             proxy_set_header      X-Forwarded-Prefix $upstream_x_forwarded_prefix;
             proxy_set_header      X-Real-IP          $remote_addr;
             proxy_pass_header     Server;
@@ -189,6 +191,7 @@ http {
             grpc_set_header      X-Forwarded-Proto  $upstream_x_forwarded_proto;
             grpc_set_header      X-Forwarded-Host   $upstream_x_forwarded_host;
             grpc_set_header      X-Forwarded-Port   $upstream_x_forwarded_port;
+            grpc_set_header      X-Forwarded-Path   $upstream_x_forwarded_path;
             grpc_set_header      X-Forwarded-Prefix $upstream_x_forwarded_prefix;
             grpc_set_header      X-Real-IP          $remote_addr;
             grpc_pass_header     Server;
@@ -207,6 +210,7 @@ http {
             grpc_set_header      X-Forwarded-Proto  $upstream_x_forwarded_proto;
             grpc_set_header      X-Forwarded-Host   $upstream_x_forwarded_host;
             grpc_set_header      X-Forwarded-Port   $upstream_x_forwarded_port;
+            grpc_set_header      X-Forwarded-Path   $upstream_x_forwarded_path;
             grpc_set_header      X-Forwarded-Prefix $upstream_x_forwarded_prefix;
             grpc_set_header      X-Real-IP          $remote_addr;
             grpc_pass_header     Server;
@@ -240,6 +244,7 @@ http {
             proxy_set_header      X-Forwarded-Proto  $upstream_x_forwarded_proto;
             proxy_set_header      X-Forwarded-Host   $upstream_x_forwarded_host;
             proxy_set_header      X-Forwarded-Port   $upstream_x_forwarded_port;
+            proxy_set_header      X-Forwarded-Path   $upstream_x_forwarded_path;
             proxy_set_header      X-Forwarded-Prefix $upstream_x_forwarded_prefix;
             proxy_set_header      X-Real-IP          $remote_addr;
             proxy_pass_header     Server;
