chore(test) make test flaky
This test fails temporarily due to acme 0.2 had a new patch release
that changed its priority invalidating this test.

While EE waits for the next merge, make it flaky.

--- a/.travis.yml
+++ b/.travis.yml
@@ -92,8 +92,8 @@ jobs:
       script:
       - make lint
       # - scripts/autodoc-admin-api
-      - bin/busted -v -o htest spec/01-unit
-      - bin/busted -v -o htest spec-ee/01-unit
+      - bin/busted -v -o htest spec/01-unit --exclude-tags=flaky
+      - bin/busted -v -o htest spec-ee/01-unit --exclude-tags=flaky
       - scripts/autodoc-admin-api
       env:
         - KONG_DATABASE=none
