fix(conf) set *_upstream_* to `NONE` as defaults
### Summary

@michaelhsk reported on #6242 that starting Kong `2.1.x` will output following
to `error.log`:

```
2020/07/07 22:13:02 [warn] 88853#0: load balancing method redefined in /usr/local/kong/nginx-kong.conf:60
```

This commit fixes the issue by setting the old injections to `NONE` by default.

### Issues Resolver

Fix #6242

--- a/spec/fixtures/1.2_custom_nginx.template
+++ b/spec/fixtures/1.2_custom_nginx.template
@@ -83,7 +83,7 @@ http {
         balancer_by_lua_block {
             Kong.balancer()
         }
-> if upstream_keepalive > 0 then
+> if upstream_keepalive and upstream_keepalive > 0 then
         keepalive ${{UPSTREAM_KEEPALIVE}};
 > end
     }
