temp workaround for UDP mode downstream socket Lua error

--- a/spec/fixtures/custom_nginx.template
+++ b/spec/fixtures/custom_nginx.template
@@ -760,7 +760,7 @@ stream {
         ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
 
         content_by_lua_block {
-            local sock = assert(ngx.req.socket(true))
+            local sock = assert(ngx.req.socket())
             local data = sock:receive()  -- read a line from downstream
             ngx.say(data) -- echo whatever was sent
         }
