--- a/spec/fixtures/custom_nginx.template
+++ b/spec/fixtures/custom_nginx.template
@@ -762,7 +762,13 @@ stream {
         content_by_lua_block {
             local sock = assert(ngx.req.socket())
             local data = sock:receive()  -- read a line from downstream
-            sock:send(data) -- echo whatever was sent
+
+            if ngx.var.protocol == "TCP" then
+                ngx.say(data)
+
+            else
+                sock:send(data) -- echo whatever was sent
+            end
         }
     }
 
