--- a/.travis.yml
+++ b/.travis.yml
@@ -93,7 +93,7 @@ jobs:
       # - scripts/autodoc
       - bin/busted -v -o htest spec/01-unit --exclude-tags=flaky
       - bin/busted -v -o htest spec-ee/01-unit --exclude-tags=flaky
-      - scripts/autodoc-admin-api
+      - scripts/autodoc
       env:
         - KONG_DATABASE=none
     # package as a test step, to see if this commit breaks our packaging
