skip smoke tests

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -12,7 +12,7 @@ jobs:
       run: |
           echo "::set-env name=KONG_SOURCE_LOCATION::$GITHUB_WORKSPACE"
           echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
-        
+
     - uses: azure/docker-login@v1
       continue-on-error: true
       with:
@@ -41,7 +41,7 @@ jobs:
       run: |
           echo "::set-env name=KONG_SOURCE_LOCATION::$GITHUB_WORKSPACE"
           echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
-        
+
     - uses: azure/docker-login@v1
       continue-on-error: true
       with:
@@ -71,7 +71,7 @@ jobs:
       run: |
           echo "::set-env name=KONG_SOURCE_LOCATION::$GITHUB_WORKSPACE"
           echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
-        
+
     - uses: azure/docker-login@v1
       continue-on-error: true
       with:
@@ -87,34 +87,34 @@ jobs:
     - name: Run Tests
       run: pushd $KONG_BUILD_TOOLS_LOCATION && make test-kong && popd
 
-  package-and-smoke-test:
-    name: Package and smoke test Kong
-    runs-on: ubuntu-18.04
-    needs: build
-
-    steps:
-    - name: Set env
-      run: |
-          echo "::set-env name=KONG_SOURCE_LOCATION::$GITHUB_WORKSPACE"
-          echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
-          
-    - uses: azure/docker-login@v1
-      continue-on-error: true
-      with:
-        username: ${{ secrets.KONG_USERNAME }}
-        password: ${{ secrets.KONG_PASSWORD }}
-
-    - name: Checkout Kong source code
-      uses: actions/checkout@v2
-
-    - name: Setup Kong Build Tools
-      run: make setup-kong-build-tools
-    
-    - name: Package Kong
-      run: pushd $HOME/kong-build-tools && make package-kong
-      
-    - name: Smoke Test Kong
-      run: pushd $HOME/kong-build-tools && make test
+# package-and-smoke-test:
+#   name: Package and smoke test Kong
+#   runs-on: ubuntu-18.04
+#   needs: build
+#
+#   steps:
+#   - name: Set env
+#     run: |
+#         echo "::set-env name=KONG_SOURCE_LOCATION::$GITHUB_WORKSPACE"
+#         echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
+#
+#   - uses: azure/docker-login@v1
+#     continue-on-error: true
+#     with:
+#       username: ${{ secrets.KONG_USERNAME }}
+#       password: ${{ secrets.KONG_PASSWORD }}
+#
+#   - name: Checkout Kong source code
+#     uses: actions/checkout@v2
+#
+#   - name: Setup Kong Build Tools
+#     run: make setup-kong-build-tools
+#
+#   - name: Package Kong
+#     run: pushd $HOME/kong-build-tools && make package-kong
+#
+#   - name: Smoke Test Kong
+#     run: pushd $HOME/kong-build-tools && make test
 
   integration-tests-dbless:
     name: DB-less integration tests
@@ -124,13 +124,13 @@ jobs:
     env:
       TEST_DATABASE: 'off'
       TEST_SUITE: dbless
-      
+
     steps:
     - name: Set env
       run: |
           echo "::set-env name=KONG_SOURCE_LOCATION::$GITHUB_WORKSPACE"
           echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
-        
+
     - uses: azure/docker-login@v1
       continue-on-error: true
       with:
@@ -174,7 +174,7 @@ jobs:
       run: |
           echo "::set-env name=KONG_SOURCE_LOCATION::$GITHUB_WORKSPACE"
           echo "::set-env name=KONG_BUILD_TOOLS_LOCATION::$HOME/kong-build-tools"
-        
+
     - uses: azure/docker-login@v1
       continue-on-error: true
       with:
