feat(cluster) enable access log on cluster listener
### Summary

Enables access logs on cluster listener and writes logs to admin
access log.

### Issues Resolved

Fix #6589

--- a/spec/fixtures/custom_nginx.template
+++ b/spec/fixtures/custom_nginx.template
@@ -448,7 +448,7 @@ http {
         listen $(entry.listener) ssl;
 > end
 
-        access_log off;
+        access_log ${{ADMIN_ACCESS_LOG}};
 
         ssl_verify_client   optional_no_ca;
         ssl_certificate     ${{CLUSTER_CERT}};
