fix(core): RPC - test config template, array of strings, better errors
- the config template used for tests was missing the inter-module RPC
socket

- to reuse the data-gathering function on both HTTP and Stream modules,
the RPC message should support array of strings, just like `ngx.print()`
.

- prefix errors with the intent.  "connection closed" is far too
ambiguous.

--- a/spec/fixtures/custom_nginx.template
+++ b/spec/fixtures/custom_nginx.template
@@ -862,5 +862,14 @@ stream {
     }
 
     include '*.stream_mock';
+
+    server {        # ignore (and close }, to ignore content)
+        listen unix:${{PREFIX}}/stream_rpc.sock udp;
+        error_log  ${{ADMIN_ERROR_LOG}} ${{LOG_LEVEL}};
+        content_by_lua_block {
+            Kong.stream_api()
+        }
+    }
+
 }
 > end
