--- a/spec/kong_tests.conf
+++ b/spec/kong_tests.conf
@@ -44,7 +44,7 @@ pg_database = kong_tests
 pg_ro_user = kong_ro
 cassandra_keyspace = kong_tests
 cassandra_timeout = 10000
-anonymous_reports = off
+anonymous_reports = on
 
 dns_hostsfile = spec/fixtures/hosts
 
