--- a/spec/fixtures/custom_nginx.template
+++ b/spec/fixtures/custom_nginx.template
@@ -59,6 +59,7 @@ http {
 
     lua_shared_dict kong_vitals_counters 5m;
     lua_shared_dict kong_vitals_lists   1m;
+    lua_shared_dict kong_vitals 1m;
     lua_shared_dict kong_counters       1m;
     lua_shared_dict kong_reports_consumers       1m;
     lua_shared_dict kong_reports_routes          1m;
@@ -784,6 +785,7 @@ stream {
     lua_shared_dict stream_kong_vitals_counters 50m;
     lua_shared_dict stream_kong_counters 50m;
     lua_shared_dict stream_kong_vitals_lists     1m;
+    lua_shared_dict stream_kong_vitals 1m;
 
 > if ssl_ciphers then
     ssl_ciphers ${{SSL_CIPHERS}};
