--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -5,6 +5,8 @@ on:
     # ignore markdown files (CHANGELOG.md, README.md, etc.)
     - '**/*.md'
     - '.github/workflows/release.yml'
+    - 'changelog/**'
+    - 'kong.conf.default'
   push:
     paths-ignore:
     # ignore markdown files (CHANGELOG.md, README.md, etc.)
